--- a/client/pom.xml
+++ b/client/pom.xml
@@ -61,6 +61,19 @@
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>prepare-package</phase>
+                        <id>prepare-class-path</id>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.oracle.graalvm.codeonline.build.PrepareClassPath</mainClass>
+                            <arguments>${project.build.directory}/extres/</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
                    <executable>${exec.java.bin}</executable>
                    <classpathScope>runtime</classpathScope>
