--- a/client/pom.xml
+++ b/client/pom.xml
@@ -175,6 +175,11 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm</artifactId>
+        <version>9.2</version>
+    </dependency>
+    <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx-web</artifactId>
         <version>${openjfx.version}</version>
