--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,6 +22,7 @@
     <exec.java.bin>${java.home}/bin/java</exec.java.bin>
     <exec.debug.arg>-Ddebug=false</exec.debug.arg>
     <springloaded.javaagent>-Djavaagent=false</springloaded.javaagent>
+    <netbeans.version>RELEASE81</netbeans.version>
   </properties>
   <build>
       <plugins>
@@ -136,6 +137,13 @@
           </plugin>
       </plugins>
   </build>
+    <repositories>
+        <repository>
+            <id>netbeans</id>
+            <name>NetBeans Archive</name>
+            <url>http://netbeans.apidesign.org/maven2/</url>
+        </repository>
+    </repositories>
   <dependencies>
     <dependency>
         <groupId>org.netbeans.html</groupId>
@@ -173,6 +181,16 @@
         <artifactId>net.java.html.boot.fx</artifactId>
         <version>${net.java.html.version}</version>
         <scope>provided</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.netbeans.external</groupId>
+        <artifactId>nb-javac-impl</artifactId>
+        <version>${netbeans.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.netbeans.external</groupId>
+        <artifactId>nb-javac-api</artifactId>
+        <version>${netbeans.version}</version>
     </dependency>
     <dependency>
         <groupId>org.ow2.asm</groupId>
