--- a/client/pom.xml
+++ b/client/pom.xml
@@ -71,7 +71,10 @@
                         </goals>
                         <configuration>
                             <mainClass>com.oracle.graalvm.codeonline.build.PrepareClassPath</mainClass>
-                            <arguments>${project.build.directory}/extres/</arguments>
+                            <arguments combine.self="override">
+                                <argument>${project.build.directory}/extres/</argument>
+                                <argument>${org.frgaal:compiler:jar}</argument>
+                            </arguments>
                         </configuration>
                     </execution>
                 </executions>
@@ -114,6 +117,13 @@
                           </artifactItems>
                           <outputDirectory>${project.build.directory}</outputDirectory>
                       </configuration>
+                  </execution>
+                  <execution>
+                      <id>dep-properties</id>
+                      <phase>initialize</phase>
+                      <goals>
+                          <goal>properties</goal>
+                      </goals>
                   </execution>
               </executions>
           </plugin>
@@ -196,6 +206,12 @@
         <groupId>org.ow2.asm</groupId>
         <artifactId>asm</artifactId>
         <version>9.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.frgaal</groupId>
+        <artifactId>compiler</artifactId>
+        <version>16.0.0</version>
+        <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>org.openjfx</groupId>
