--- a/client-web/pom.xml
+++ b/client-web/pom.xml
@@ -194,6 +194,14 @@
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.graalvm.codeonline</groupId>
+            <artifactId>compiler</artifactId>
+            <version>${project.version}</version>
+            <classifier>bck2brwsr</classifier>
+            <scope>provided</scope>
+            <type>jar</type>
+        </dependency>
 
 
         <!-- browser JUnit runner -->
