--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,7 +22,6 @@
     <exec.java.bin>${java.home}/bin/java</exec.java.bin>
     <exec.debug.arg>-Ddebug=false</exec.debug.arg>
     <springloaded.javaagent>-Djavaagent=false</springloaded.javaagent>
-    <netbeans.version>RELEASE81</netbeans.version>
   </properties>
   <build>
       <plugins>
@@ -193,14 +192,9 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
-        <groupId>org.netbeans.external</groupId>
-        <artifactId>nb-javac-impl</artifactId>
-        <version>${netbeans.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.external</groupId>
-        <artifactId>nb-javac-api</artifactId>
-        <version>${netbeans.version}</version>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>compiler</artifactId>
+        <version>${project.version}</version>
     </dependency>
     <dependency>
         <groupId>org.ow2.asm</groupId>
