Split desktop client from general client code, fixed assembly

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>client</module>
         <module>client-web</module>
+        <module>client-desktop</module>
         <module>js</module>
         <module>javac</module>
     </modules>
