--- a/client-desktop/pom.xml
+++ b/client-desktop/pom.xml
@@ -10,15 +10,15 @@
   </parent>
 
   <groupId>org.graalvm.codeonline</groupId>
-  <artifactId>codeonline</artifactId>
+  <artifactId>codeonline-desktop</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
-  <name>codeonline General Client Code</name>
+  <name>codeonline Desktop Client Code</name>
 
   <properties>
     <netbeans.compile.on.save>all</netbeans.compile.on.save>
-    <project.mainclass>com.oracle.graalvm.codeonline.Main</project.mainclass>
+    <project.mainclass>com.oracle.graalvm.codeonline.DesktopMain</project.mainclass>
     <exec.java.bin>${java.home}/bin/java</exec.java.bin>
     <exec.debug.arg>-Ddebug=false</exec.debug.arg>
     <springloaded.javaagent>-Djavaagent=false</springloaded.javaagent>
@@ -61,23 +61,6 @@
               <groupId>org.codehaus.mojo</groupId>
               <artifactId>exec-maven-plugin</artifactId>
               <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <id>prepare-class-path</id>
-                        <goals>
-                            <goal>java</goal>
-                        </goals>
-                        <configuration>
-                            <mainClass>com.oracle.graalvm.codeonline.build.PrepareClassPath</mainClass>
-                            <classpathScope>compile</classpathScope>
-                            <arguments combine.self="override">
-                                <argument>${project.build.directory}/extres/</argument>
-                                <argument>${org.frgaal:compiler:jar}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
                 <configuration>
                    <executable>${exec.java.bin}</executable>
                    <classpathScope>runtime</classpathScope>
@@ -127,24 +110,6 @@
                   </execution>
               </executions>
           </plugin>
-          <plugin>
-              <artifactId>maven-assembly-plugin</artifactId>
-              <version>2.4</version>
-              <executions>
-                  <execution>
-                      <id>web-pages</id>
-                      <phase>package</phase>
-                      <goals>
-                          <goal>single</goal>
-                      </goals>
-                      <configuration>
-                          <descriptors>
-                              <descriptor>src/main/assembly/webpages.xml</descriptor>
-                          </descriptors>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
       </plugins>
   </build>
     <repositories>
@@ -155,6 +120,11 @@
         </repository>
     </repositories>
   <dependencies>
+    <dependency>
+        <groupId>org.graalvm.codeonline</groupId>
+        <artifactId>codeonline</artifactId>
+        <version>${project.version}</version>
+    </dependency>
     <dependency>
         <groupId>org.netbeans.html</groupId>
         <artifactId>net.java.html</artifactId>
@@ -190,23 +160,6 @@
         <groupId>org.netbeans.html</groupId>
         <artifactId>net.java.html.boot.fx</artifactId>
         <version>${net.java.html.version}</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>compiler</artifactId>
-        <version>${project.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ow2.asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>9.2</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.frgaal</groupId>
-        <artifactId>compiler</artifactId>
-        <version>16.0.0</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
@@ -227,7 +180,7 @@
         <scope>test</scope>
     </dependency>
 
-    <!-- Nashorn presenter for BrowserRunner -->
+    <!-- Nashorn presenter for BrowserRunner
     <dependency>
       <groupId>org.netbeans.html</groupId>
       <artifactId>net.java.html.boot.script</artifactId>
@@ -235,8 +188,9 @@
       <scope>test</scope>
       <type>jar</type>
     </dependency>
+    -->
 
-    <!-- Bck2Brwsr VM presenter for BrowserRunner ...
+    <!-- Bck2Brwsr VM presenter for BrowserRunner - - >
     <dependency>
       <groupId>org.apidesign.bck2brwsr</groupId>
       <artifactId>launcher.http</artifactId>
@@ -260,6 +214,115 @@
         <classifier>bck2brwsr</classifier>
         <type>jar</type>
     </dependency>
-    ... End of Bck2Brwsr VM presenter for BrowserRunner -->
+    < ! - - End of Bck2Brwsr VM presenter for BrowserRunner -->
   </dependencies>
+  <profiles>
+      <profile>
+          <id>desktop</id>
+          <dependencies>
+              <dependency>
+                  <groupId>org.netbeans.html</groupId>
+                  <artifactId>net.java.html.boot.fx</artifactId>
+                  <version>${net.java.html.version}</version>
+                  <scope>runtime</scope>
+              </dependency>
+              <dependency>
+                  <groupId>org.openjfx</groupId>
+                  <artifactId>javafx-web</artifactId>
+                  <version>${openjfx.version}</version>
+                  <scope>runtime</scope>
+              </dependency>
+          </dependencies>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-jar-plugin</artifactId>
+                      <version>2.4</version>
+                      <configuration>
+                          <archive>
+                              <manifest>
+                                  <mainClass>${project.mainclass}</mainClass>
+                                  <addClasspath>true</addClasspath>
+                                  <classpathPrefix>lib/</classpathPrefix>
+                                  <useUniqueVersions>false</useUniqueVersions>
+                              </manifest>
+                          </archive>
+                      </configuration>
+                  </plugin>
+                  <plugin>
+                      <artifactId>maven-assembly-plugin</artifactId>
+                      <version>2.4</version>
+                      <executions>
+                          <execution>
+                              <id>distro-assembly</id>
+                              <phase>package</phase>
+                              <goals>
+                                  <goal>single</goal>
+                              </goals>
+                              <configuration>
+                                  <descriptors>
+                                      <descriptor>src/main/assembly/javafx.xml</descriptor>
+                                  </descriptors>
+                              </configuration>
+                          </execution>
+                      </executions>
+                  </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.9</version>
+                    <executions>
+                        <execution>
+                            <id>unpack</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>unpack-dependencies</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                    <configuration>
+                        <type>zip</type>
+                        <classifier>webpages</classifier>
+                        <overWrite>true</overWrite>
+                        <outputDirectory>target/classes/pages</outputDirectory>
+                        <includes>*/**</includes>
+                        <includeGroupIds>${project.groupId}</includeGroupIds>
+                    </configuration>
+                </plugin>
+              </plugins>
+          </build>
+      </profile>
+      <profile>
+          <id>webkit-presenter</id>
+          <dependencies>
+              <dependency>
+                  <groupId>com.dukescript.presenters</groupId>
+                  <artifactId>webkit</artifactId>
+                  <version>${presenters.version}</version>
+                  <scope>runtime</scope>
+              </dependency>
+          </dependencies>
+      </profile>
+      <profile>
+          <id>browser-presenter</id>
+          <dependencies>
+              <dependency>
+                  <groupId>com.dukescript.presenters</groupId>
+                  <artifactId>browser</artifactId>
+                  <version>${presenters.version}</version>
+                  <scope>runtime</scope>
+              </dependency>
+          </dependencies>
+      </profile>
+      <profile>
+          <id>jdk-8</id>
+          <activation>
+              <jdk>1.8</jdk>
+          </activation>
+          <properties>
+              <springloaded.javaagent>-javaagent:${project.build.directory}/springloaded.jar</springloaded.javaagent>
+          </properties>
+      </profile>
+  </profiles>
 </project>
