--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>client-desktop</module>
         <module>js</module>
         <module>javac</module>
+        <module>models</module>
+        <module>editor</module>
     </modules>
     <properties>
         <net.java.html.version>1.7.2</net.java.html.version>
