--- a/client-desktop/pom.xml
+++ b/client-desktop/pom.xml
@@ -157,6 +157,11 @@
         <version>${project.version}</version>
     </dependency>
     <dependency>
+        <groupId>org.graalvm.codeonline</groupId>
+        <artifactId>codeonline-compiler-nbjavac</artifactId>
+        <version>${project.version}</version>
+    </dependency>
+    <dependency>
         <groupId>org.netbeans.html</groupId>
         <artifactId>net.java.html.boot.fx</artifactId>
         <version>${net.java.html.version}</version>
