--- a/client/pom.xml
+++ b/client/pom.xml
@@ -208,9 +208,9 @@
         <version>${project.version}</version>
     </dependency>
     <dependency>
-        <groupId>org.ow2.asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>9.2</version>
+        <groupId>org.graalvm.codeonline</groupId>
+        <artifactId>codeonline-build</artifactId>
+        <version>${project.version}</version>
         <scope>provided</scope>
     </dependency>
     <dependency>
