--- a/pom.xml
+++ b/pom.xml
@@ -10,15 +10,14 @@
 
   <name>codeonline</name>
     <modules>
-        <module>client</module>
-        <module>client-web</module>
-        <module>client-desktop</module>
         <module>javac</module>
         <module>models</module>
         <module>editor</module>
         <module>compiler-common</module>
         <module>compiler-nbjavac</module>
         <module>build</module>
+        <module>live-doc-base</module>
+        <module>live-doc-ui</module>
     </modules>
     <properties>
         <net.java.html.version>1.7.2</net.java.html.version>
