--- a/live-doc-ui-test/pom.xml
+++ b/live-doc-ui-test/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -18,6 +18,8 @@
         <exec.java.bin>${java.home}/bin/java</exec.java.bin>
         <exec.debug.arg>-Ddebug=false</exec.debug.arg>
         <springloaded.javaagent>-Djavaagent=false</springloaded.javaagent>
+        <openjfx.version>11</openjfx.version>
+        <presenters.version>1.7.1</presenters.version>
     </properties>
 
     <build>
