--- a/editor/pom.xml
+++ b/editor/pom.xml
@@ -1,256 +1,82 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-      <groupId>org.graalvm.codeonline</groupId>
-      <artifactId>codeonline-pom</artifactId>
-      <version>1.0-SNAPSHOT</version>
-  </parent>
-
-  <groupId>org.graalvm.codeonline</groupId>
-  <artifactId>codeonline-editor</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
-
-  <name>codeonline Editor Widget</name>
-
-  <properties>
-    <netbeans.compile.on.save>all</netbeans.compile.on.save>
-    <project.mainclass>com.oracle.graalvm.codeonline.Main</project.mainclass>
-    <exec.java.bin>${java.home}/bin/java</exec.java.bin>
-    <exec.debug.arg>-Ddebug=false</exec.debug.arg>
-    <springloaded.javaagent>-Djavaagent=false</springloaded.javaagent>
-  </properties>
-  <build>
-      <plugins>
-          <plugin>
-              <groupId>org.apache.felix</groupId>
-              <artifactId>maven-bundle-plugin</artifactId>
-              <version>2.4.0</version>
-              <extensions>true</extensions>
-              <configuration>
-                  <instructions>
-                      <Export-Package>com.oracle.graalvm.codeonline</Export-Package>
-                      <Bundle-SymbolicName>com.oracle.graalvm.codeonline</Bundle-SymbolicName>
-                  </instructions>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.19.1</version>
-              <configuration>
-                  <junitArtifactName>com.dukescript.api:junit-osgi</junitArtifactName>
-                  <systemPropertyVariables>
-                      <fxpresenter.headless>true</fxpresenter.headless>
-                  </systemPropertyVariables>
-              </configuration>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-dependency-plugin</artifactId>
-              <version>2.10</version>
-              <executions>
-                  <execution>
-                      <id>copy</id>
-                      <phase>process-classes</phase>
-                      <goals>
-                          <goal>copy</goal>
-                      </goals>
-                      <configuration>
-                          <artifactItems>
-                              <artifactItem>
-                                  <groupId>org.springframework</groupId>
-                                  <artifactId>springloaded</artifactId>
-                                  <version>1.2.3.RELEASE</version>
-                                  <type>jar</type>
-                                  <overWrite>false</overWrite>
-                                  <destFileName>springloaded.jar</destFileName>
-                              </artifactItem>
-                          </artifactItems>
-                          <outputDirectory>${project.build.directory}</outputDirectory>
-                      </configuration>
-                  </execution>
-                  <execution>
-                      <id>dep-properties</id>
-                      <phase>initialize</phase>
-                      <goals>
-                          <goal>properties</goal>
-                      </goals>
-                  </execution>
-              </executions>
-          </plugin>
-        <plugin>
-            <groupId>com.dukescript.libraries</groupId>
-            <artifactId>typings-maven-plugin</artifactId>
-            <version>0.5</version>
-            <executions>
-                <execution>
-                    <id>cm-typings</id>
-                    <goals>
-                        <goal>generate</goal>
-                    </goals>
-                    <configuration>
-                        <typings>${basedir}/src/main/ts/cm.d.ts</typings>
-                        <package>com.oracle.graalvm.codeonline.editor.cm</package>
-                        <imports>
-                            <import>net.java.html.lib.dom</import>
-                        </imports>
-                    </configuration>
-                </execution>
-            </executions>
-        </plugin>
-      </plugins>
-  </build>
-    <repositories>
-        <repository>
-            <id>netbeans</id>
-            <name>NetBeans Archive</name>
-            <url>http://netbeans.apidesign.org/maven2/</url>
-        </repository>
-    </repositories>
-  <dependencies>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>net.java.html</artifactId>
-        <version>${net.java.html.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>net.java.html.json</artifactId>
-        <version>${net.java.html.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>net.java.html.boot</artifactId>
-        <version>${net.java.html.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>net.java.html.sound</artifactId>
-        <version>${net.java.html.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>ko4j</artifactId>
-        <version>${net.java.html.version}</version>
-        <scope>runtime</scope>
-    </dependency>
-    <dependency>
+    <parent>
         <groupId>org.graalvm.codeonline</groupId>
-        <artifactId>codeonline-models</artifactId>
-        <version>${project.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.netbeans.html</groupId>
-        <artifactId>net.java.html.boot.fx</artifactId>
-        <version>${net.java.html.version}</version>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>${project.groupId}</groupId>
-        <artifactId>compiler</artifactId>
-        <version>${project.version}</version>
-    </dependency>
-    <dependency>
-        <groupId>org.ow2.asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>9.2</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.frgaal</groupId>
-        <artifactId>compiler</artifactId>
-        <version>16.0.0</version>
-        <scope>provided</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.dukescript.libraries</groupId>
-        <artifactId>net.java.html.lib</artifactId>
-        <version>0.5</version>
-    </dependency>
-    <dependency>
-        <groupId>com.dukescript.libraries</groupId>
-        <artifactId>net.java.html.lib.dom</artifactId>
-        <version>0.5</version>
-    </dependency>
-    <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-web</artifactId>
-        <version>${openjfx.version}</version>
-        <scope>test</scope>
-    </dependency>
+        <artifactId>codeonline-pom</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <dependency>
-        <groupId>com.dukescript.api</groupId>
-        <artifactId>junit-osgi</artifactId>
-        <scope>test</scope>
-    </dependency>
-    <dependency>
-        <groupId>com.dukescript.api</groupId>
-        <artifactId>junit-browser-runner</artifactId>
-        <scope>test</scope>
-    </dependency>
+    <artifactId>codeonline-editor</artifactId>
+    <name>CodeOnline Editor Widget</name>
 
-    <!-- Nashorn presenter for BrowserRunner -->
-    <dependency>
-      <groupId>org.netbeans.html</groupId>
-      <artifactId>net.java.html.boot.script</artifactId>
-      <version>${net.java.html.version}</version>
-      <scope>test</scope>
-      <type>jar</type>
-    </dependency>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.dukescript.libraries</groupId>
+                <artifactId>typings-maven-plugin</artifactId>
+                <version>0.5</version>
+                <executions>
+                    <execution>
+                        <id>cm-typings</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <typings>${basedir}/src/main/ts/cm.d.ts</typings>
+                            <package>com.oracle.graalvm.codeonline.editor.cm</package>
+                            <imports>
+                                <import>net.java.html.lib.dom</import>
+                            </imports>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
-    <!-- Bck2Brwsr VM presenter for BrowserRunner ...
-    <dependency>
-      <groupId>org.apidesign.bck2brwsr</groupId>
-      <artifactId>launcher.http</artifactId>
-      <version>${bck2brwsr.version}</version>
-      <scope>test</scope>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-      <groupId>org.apidesign.bck2brwsr</groupId>
-      <artifactId>ko-bck2brwsr</artifactId>
-      <version>${bck2brwsr.version}</version>
-      <classifier>bck2brwsr</classifier>
-      <scope>test</scope>
-      <type>jar</type>
-    </dependency>
-    <dependency>
-        <groupId>com.dukescript.api</groupId>
-        <artifactId>junit-browser-runner</artifactId>
-        <version>${junit.browser.version}</version>
-        <scope>test</scope>
-        <classifier>bck2brwsr</classifier>
-        <type>jar</type>
-    </dependency>
-    ... End of Bck2Brwsr VM presenter for BrowserRunner -->
-  </dependencies>
-  <profiles>
-      <profile>
-          <id>explicit-js-engine</id>
-          <activation>
-              <jdk>[11,)</jdk>
-          </activation>
-          <build>
-              <plugins>
-                <plugin>
-                    <groupId>com.dukescript.libraries</groupId>
-                    <artifactId>typings-maven-plugin</artifactId>
-                    <version>0.5</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>org.openjdk.nashorn</groupId>
-                            <artifactId>nashorn-core</artifactId>
-                            <version>15.3</version>
-                        </dependency>
-                    </dependencies>
-                </plugin>
-              </plugins>
-          </build>
-      </profile>
-  </profiles>
+    <dependencies>
+        <dependency>
+            <groupId>org.graalvm.codeonline</groupId>
+            <artifactId>codeonline-models</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dukescript.libraries</groupId>
+            <artifactId>net.java.html.lib</artifactId>
+            <version>0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dukescript.libraries</groupId>
+            <artifactId>net.java.html.lib.dom</artifactId>
+            <version>0.5</version>
+        </dependency>
+    </dependencies>
+
+    <profiles>
+        <profile>
+            <id>explicit-js-engine</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.dukescript.libraries</groupId>
+                        <artifactId>typings-maven-plugin</artifactId>
+                        <version>0.5</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.openjdk.nashorn</groupId>
+                                <artifactId>nashorn-core</artifactId>
+                                <version>15.3</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
