--- a/javac/pom.xml
+++ b/javac/pom.xml
@@ -1,46 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-  http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.graalvm.codeonline</groupId>
         <artifactId>codeonline-pom</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
- 
+
     <artifactId>compiler</artifactId>
     <packaging>bundle</packaging>
- 
+
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <netbeans.version>RELEASE81</netbeans.version>
     </properties>
- 
-    <repositories>
-      <repository>
-        <id>netbeans</id>
-        <name>NetBeans</name>
-        <url>http://bits.netbeans.org/maven2/</url>
-      </repository>
-    </repositories>
- 
-    <dependencies>
-        <dependency>
-            <groupId>org.netbeans.external</groupId>
-            <artifactId>nb-javac-api</artifactId>
-            <version>${netbeans.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.netbeans.external</groupId>
-            <artifactId>nb-javac-impl</artifactId>
-            <version>${netbeans.version}</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
- 
+
     <build>
         <plugins>
             <plugin>
@@ -75,5 +50,27 @@
             </plugin>
         </plugins>
     </build>
-</project>
 
+    <repositories>
+        <repository>
+            <id>netbeans</id>
+            <name>NetBeans</name>
+            <url>http://bits.netbeans.org/maven2/</url>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>nb-javac-api</artifactId>
+            <version>${netbeans.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>nb-javac-impl</artifactId>
+            <version>${netbeans.version}</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+</project>
